sandbox/output
ReorderTest.java:49: error: ';' expected
          Arrays.asList(1,3,2),Arrays.asList(3,1,2),Arrays.asList(3,2,1));
                              ^
ReorderTest.java:49: error: ';' expected
          Arrays.asList(1,3,2),Arrays.asList(3,1,2),Arrays.asList(3,2,1));
                                                   ^
ReorderTest.java:49: error: ';' expected
          Arrays.asList(1,3,2),Arrays.asList(3,1,2),Arrays.asList(3,2,1));
                                                                        ^
3 errors
